# deep-recurrent

./: CMakeLists.txt  drnt.cpp  drnt_forward.cpp  drnt_gridsearch.cpp  drnt_run.cpp  gru_drnt.cpp  gru_drnt_forward.cpp  gru_drnt_gridsearch.cpp  gru_drnt_norms.cpp  gru_drnt_run.cpp  model.cpp  model.h  run.sh  softmax_reg.cpp  utils.cpp
data/: agent.txt  dse2.txt  target.txt
data_utils/: CMakeList.txt  utils.cpp
examples/: all.txt  ex1.txt
notes/: drnt.tex  gru_drnt.tex
presentation/: beamerthemeconfposter.sty  main.tex  presentation_bib.bib
scripts/: qsub_models.py
templates/: qsub.jinja  run.jinja
